<resources>
    <string name="app_name">Layout</string>
    <string name="txtDate">16 MAY 2016</string>
    <string name="txtContent">Synth polaroid bitters chillwave pickled. Vegan disrupt tousled, Portland keffiyeh aesthetic food truck sriracha cornhole single-origin coffee church key roof party. Leggings ethical McSweeney\'s, normcore you probably haven\'t heard of them Marfa organic squid.</string>
    <string name="read_article">READ ARTICLE</string>
    <string name="travelling">TRAVELLING</string>
    <string name="txt_title">Tousled food truck polaroid salvia</string>
    <string name="txt_local">San Fransisco, CA</string>
    <string name="name_person">Harriet Welsch</string>
    <string name="comment">14 COMMENTS</string>
    <string name="most_popular">Most Popular</string>
    <string name="image_room">image room</string>
    <string name="select">select</string>
</resources>
