<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <ImageView
                android:id="@+id/imvImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img2"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/tvTiltle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imvImage"
                android:layout_marginStart="@dimen/dp19"
                android:layout_marginTop="@dimen/dp14"
                android:text="@string/fab_transformation_scrim_behavior"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="-0.02"
                android:textColor="#030303"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvTopic"
                android:text="@string/travelling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTiltle"
                android:layout_marginStart="@dimen/dp19"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"
                android:textColor="#b8e986"
                android:textSize="@dimen/sp12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTime"
                android:text="@string/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTiltle"
                android:layout_marginStart="11.2dp"
                android:layout_marginTop="@dimen/dp7"
                android:layout_toEndOf="@id/tvTopic"
                android:fontFamily="sans-serif-light"
                android:letterSpacing="0"
                android:textColor="#c7c7cd"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvContent"
                android:text="@string/txtContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTopic"
                android:layout_marginStart="19dp"
                android:layout_marginTop="@dimen/dp7"
                android:layout_marginEnd="41dp"
                android:fontFamily="sans-serif"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="8sp"
                android:textColor="#8f8e94"
                android:textSize="@dimen/sp14"
                android:textStyle="normal" />


            <LinearLayout
                android:id="@+id/layoutInfor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp49"
                android:layout_below="@id/tvContent"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/comment"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:letterSpacing="0.17"
                    android:textColor="#8f8e94"
                    android:textSize="@dimen/sp10"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvLike"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="14 Like"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:letterSpacing="0.17"
                    android:textColor="#8f8e94"
                    android:textSize="@dimen/sp10"
                    android:textStyle="normal" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>